<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_tambah_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_tambah_reminder"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_size_21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text_teal_rounded"
        android:textSize="@dimen/txt_size_14"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:inputType="text"
        android:maxLength="20"
        android:hint="@string/str_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_tambah_reminder" />

    <EditText
        android:id="@+id/edt_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text_teal_rounded"
        android:textSize="@dimen/txt_size_14"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:inputType="text"
        android:maxLength="50"
        android:hint="@string/str_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_title" />

    <EditText
        android:id="@+id/edt_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text_teal_rounded"
        android:textSize="@dimen/txt_size_14"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:inputType="datetime"
        android:focusable="false"
        android:hint="@string/str_tanggal_waktu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_desc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_size_16"
        android:text="@string/str_submit"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>